# rustakka-agent

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/rustakka-agent/: Cargo.toml
crates/rustakka-agent-eq/: Cargo.toml
crates/rustakka-agent-eq/src/: lib.rs
crates/rustakka-agent-iq/: Cargo.toml
crates/rustakka-agent-iq/src/: ladder.rs  lib.rs
crates/rustakka-agent-iq/tests/: fuzz_ladder.rs
crates/rustakka-agent-persona/: Cargo.toml
crates/rustakka-agent-persona/src/: lib.rs  validate.rs
crates/rustakka-agent-persona/tests/: fuzz_loaders.rs  golden_prompts.rs  safety_redteam.rs
crates/rustakka-agent-persona/tests/fixtures/: minimal.txt  tutor.txt
crates/rustakka-agent-prebuilt/: Cargo.toml
crates/rustakka-agent-prebuilt/src/: graph.rs  lib.rs  react.rs  reflection.rs  supervisor.rs
crates/rustakka-agent-prebuilt/src/aiq_research/: mod.rs
crates/rustakka-agent-prebuilt/src/omo_harness/: mod.rs
crates/rustakka-agent-prebuilt/src/patterns/: adaptive_rag.rs  codex_loop.rs  crag.rs  debate.rs  eval_opt.rs  guardrails.rs  hitl_gate.rs  memory_agent.rs  mod.rs  plan_execute.rs  rag.rs  reflexion.rs  router.rs  self_consistency.rs  self_rag.rs  tot.rs
crates/rustakka-agent-prebuilt/tests/: pattern_composition.rs
crates/rustakka-agent-profiler/: Cargo.toml
crates/rustakka-agent-profiler/src/: lib.rs  main.rs
crates/rustakka-agent-traits/: Cargo.toml
crates/rustakka-agent-traits/src/: lib.rs
crates/rustakka-agent/examples/: rust_aiq_research.rs  rust_omo_harness.rs  rust_pattern_debate.rs  rust_pattern_plan_execute.rs  rust_pattern_rag_suite.rs  rust_pattern_reflexion.rs  rust_persona_react.rs  rust_supervisor_team.rs
crates/rustakka-agent/src/: lib.rs
docs/: TODO.md  aiq-research.md  integration.md  iq-ladders.md  omo-harness.md  patterns.md  persona-schema.md  plan.md
