[workspace]
resolver = "2"
members = [
    "crates/rustakka-agent-traits",
    "crates/rustakka-agent-iq",
    "crates/rustakka-agent-eq",
    "crates/rustakka-agent-persona",
    "crates/rustakka-agent",
]

[workspace.package]
version       = "0.0.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/rustakka/rustakka-agent"
rust-version  = "1.76"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
