[package]
name         = "rustakka-agent-eq"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
description  = "EQ profile (emotional characteristics) for rustakka-agent."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
rustakka-agent-traits = { path = "../rustakka-agent-traits" }
